move the advancedsearchquery code into AbstractEntity
it was previously spread everywhere, now it also works from apiv1 or v2
also simplified the extendederror stuff by removing it and relying on
the normal exception workflow

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -81,7 +81,7 @@
         <!-- SEARCH BAR -->
         <form class='nav-item form-inline ml-auto' method='get' action='{{ App.Request.getScriptName }}'>
             {% if App.Request.getScriptName|split('/')|last == 'experiments.php' or App.Request.getScriptName|split('/')|last == 'database.php' %}
-            <input class='form-control big-search {{- extendedError ? ' is-invalid' }}' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
+            <input class='form-control big-search' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
             {% endif %}
         </form>
 
@@ -212,12 +212,6 @@
     </div>
   </div>
 </div>
-<!-- Search error feedback -->
-{% if (App.Request.getScriptName|split('/')|last == 'experiments.php'
-       or App.Request.getScriptName|split('/')|last == 'database.php'
-      ) and extendedError %}
-  {{ extendedError|msg('ko') }}
-{% endif %}
 <!-- TITLE -->
 <!-- login and register pages will have this title hidden -->
 <h1 id='pageTitle' {% if hideTitle %}hidden{%endif%}>{% block title %}{{ App.pageTitle }}{% endblock %}</h1>
