--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -170,19 +170,19 @@
     </div>
   </div>
 
-  <!-- DATE -->
-  <div>
-    <i aria-hidden='true' class='far fa-calendar-alt mr-1'></i>{{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
-  </div>
-
   <!-- TITLE : click on it to go to edit mode only if we are not in read only mode -->
   {% set isEditable = not Entity.isReadOnly and not Entity.entityData.locked %}
-  <h1 id='documentTitle' class='overflow-break-word {{ isEditable ? 'hover-action' }}' {{ isEditable ? 'data-action="edit"' }}>
+  <h1 id='documentTitle' class='mb-2 overflow-break-word {{ isEditable ? 'hover-action' }}' {{ isEditable ? 'data-action="edit"' }}>
       {% if Entity.type == 'items' %}
           <span style='color:#{{ Entity.entityData.color }}'>{{ Entity.entityData.category }}</span>
       {% endif %}
       {{ Entity.entityData.title|raw }}
   </h1>
+
+  <!-- DATE -->
+  <div>
+    <i aria-hidden='true' class='far fa-calendar-alt mr-1'></i>{{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
+  </div>
 
   <!-- SHOW EVENTS -->
   {% if Entity.entityData.is_bound %}<i class='far fa-calendar-alt'></i>
@@ -212,21 +212,10 @@
       {% if body|trim == '' %}
           {% set body = Entity.entityData.body %}
       {% endif %}
-      <div id='body_view' class='txt'>{{ body|raw }}</div>
+      <div id='body_view' class='pt-2'>{{ body|raw }}</div>
   {% endif %}
 
   <div id='metadataDiv' class='col-md-6'></div>
-
-  <div class='row'>
-    <div class='col-6'>
-      <!-- SHOW LAST MOD -->
-      <p>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</p>
-    </div>
-    <div class='col-6'>
-      <!-- eLabID -->
-      <p class='elabid'>{{ 'Unique eLabID:'|trans }} {{ Entity.entityData.elabid }}</p>
-    </div>
-  </div>
 
 </section>
 
@@ -242,7 +231,8 @@
 <section id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment' class='box'>
-      <h3><i class='fas fa-comments' class='d-inline'></i> {{ 'Comments'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='commentsIcon' class='d-inline'><i id='commentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-comments'></i> {{ 'Comments'|trans }}</h3>
+    <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
             <div class='comment-header text-muted p-2'>
@@ -262,22 +252,37 @@
           </div>
         {% endfor %}
 
-      <!-- CREATE COMMENT INPUT -->
-      <textarea id='commentsCreateArea' class='form-control' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
-      <div id='commentsCreateButtonDiv' class='mt-4 text-center'>
-        <button class='button btn btn-primary' data-action='create-comment'>{{ 'Save'|trans }}</button>
+        <!-- CREATE COMMENT INPUT -->
+        <textarea id='commentsCreateArea' class='form-control' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
+        <div id='commentsCreateButtonDiv' class='mt-4 text-center'>
+          <button class='button btn btn-primary' data-action='create-comment'>{{ 'Save'|trans }}</button>
+        </div>
       </div>
     </div>
   {% endif %}
 </section>
 
-<!-- REVISIONS -->
-{% if revNum > 0 %}
-    <span class='float-right'><i class='fas fa-history mr-1'></i>
+  <div class='maingray text-right d-flex flex-column'>
+    <!-- REVISIONS -->
+    {% if revNum > 0 %}
+      <div>
+        <i class='fas fa-history mr-1'></i>
         <a href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'>{{ revNum }}
-            {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
-    </span>
-{% endif %}
+          {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
+      </div>
+    {% endif %}
+
+    <!-- SHOW LAST MOD -->
+    <div>
+      <span>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</span>
+    </div>
+
+    <!-- eLabID -->
+    <div>
+      <span class='elabid'>{{ 'Unique eLabID:'|trans }} {{ Entity.entityData.elabid }}</span>
+    </div>
+  </div>
+
 
 <div id='info'
     data-page='view'
