--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -63,7 +63,7 @@
         {% endif %}
         <!-- PIN -->
         <a data-action='toggle-pin' data-id='{{ Entity.id }}' href='#' class='dropdown-item'>
-          <i class='fas fa-thumbtack fa-fw mr-1'></i>{{ 'Toggle pin'|trans }}
+          <i class='fas fa-thumbtack fa-fw mr-1'></i>{{ 'Toggle pin (add to create button menu)'|trans }}
         </a>
         <!-- LOCK -->
         <a data-action='toggle-lock' data-id="{{ Entity.id }}" href='#' class='dropdown-item'>
