update sysconfig page latest version label to show "stable" word
fix #3916

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -4,7 +4,7 @@
 <!-- display current and latest version -->
 <p>{{ 'Installed version:'|trans }} <span id='currentVersion'>{{ v }}</span>
 <br>
-{{ 'Latest version:'|trans }} <span id='latestVersion'></span>
+{{ 'Latest stable version:'|trans }} <span id='latestVersion'></span>
 
 <!-- show error if the email is not configured -->
 {% if App.Config.configArr.mail_from == 'notconfigured@example.com' %}
