add doc link for @page

--- a/src/scss/pdf.scss
+++ b/src/scss/pdf.scss
@@ -6,6 +6,7 @@
  * @package elabftw
  */
 
+/* see documentation: https://mpdf.github.io/paging/using-page.html */
 @page {
     /* stylelint-disable-next-line property-no-unknown */
     footer: html_footer;
