add documentation link on api page

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -335,6 +335,7 @@
 <!-- TAB 4 - API KEYS -->
 <div class='box' data-tabcontent='4' hidden>
   <h3>{{ 'API keys'|trans }}</h3>
+  <p><a target='_blank' rel='noopener' href='https://doc.elabftw.net/api.html'>{{ 'Link to documentation'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></p>
   <div id='newKeyPlaceholder'></div>
   <h5>{{ 'Create new key'|trans }}</h5>
   <div class='row form-inline mx-0'>
