--- a/src/templates/show-templates-view.html
+++ b/src/templates/show-templates-view.html
@@ -25,6 +25,8 @@
             </a>
             <!-- CREATE EXPERIMENT FROM TPL -->
             <a href='#' data-action='create-entity' data-tplid='{{ entityData.id }}' class='dropdown-item'><i class='fas fa-circle-plus fa-fw mr-1'></i>{{ 'Create experiment from template'|trans }}</a>
+            <!-- DOWNLOAD TEMPLATE -->
+            <a href='#' data-action='download-template' data-id='{{ entityData.id }}' class='dropdown-item'><i class='fas fa-download fa-fw mr-1'></i>{{ 'Download template'|trans }}</a>
             <!-- DESTROY TPL -->
             {% if App.Session.get('is_admin') %}
             <div class='dropdown-divider'></div>
