sort entity tables in view mode (#3852)
* working version
* nested tables work
* limitations: th has to be used in first row and only in first row

* handle colspan and rowspan

* avoid unnecessary calculation

* refactor to class

* auto detect if thead is used

* more refactoring

* use twig comments, not html comments in loops

* add return type and refactor getComparer

* change some wording

* avoid duplication

* HTMLPurifier: allow data-table-sort attribute on tables

* refactor TableSorting class
- export isSortable()
- use Schwartzian transform, avoid calling getCellValue() over and over again
- get tables exclusively by data-table-sort attribute

* add 'make tabel sortable' button to tinyMCE

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -122,12 +122,15 @@
 
 <section class='box'>
     <h5><i class='fas fa-users'></i> {{ 'Members'|trans }}</h5>
-    <table id='teamtable' class='table' aria-describedby='pageTitle'>
+    <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
+      <thead>
         <tr>
             <th>{{ 'Name'|trans }}</th>
             <th>{{ 'Email'|trans }}</th>
             <th>ORCID</th>
         </tr>
+      </thead>
+      <tbody>
         <!-- archived users are hidden on this page -->
         {% for user in App.Users.readAllFromTeam()|filter(u => u.archived == 0) %}
         <tr>
@@ -145,6 +148,7 @@
           <td>{{ user.orcid }}</td>
         </tr>
         {% endfor %}
+      </tbody>
     </table>
 </section>
 
