--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -350,7 +350,7 @@
   </div>
 
   <h5 id='existingKeys'>{{ 'Existing keys'|trans }}</h5>
-  <table id='apiTable' class='table' aria-describedby='existingKeys'>
+  <table id='apiTable' class='table' aria-describedby='existingKeys' data-table-sort='true'>
     <thead>
       <tr>
         <th scope='col'>#</th>
