--- a/src/templates/filter-order-sort.html
+++ b/src/templates/filter-order-sort.html
@@ -1,6 +1,6 @@
 <div class='row'>
-  <!-- LEFT MENU: FILTER/ORDER/SORT/LIMIT -->
-  <!-- we hide this menu for small devices -->
+  {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
+  {# we hide this menu for small devices #}
   <div class='col-md-10 hidden-xs {{ searchPage ? 'mt-2' }}'>
     <form>
     <div class='form-group form-inline'>
@@ -11,8 +11,7 @@
         <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
       {% endif %}
 
-
-      <!-- CATEGORY -->
+      {# CATEGORY #}
       <select name='cat' class='autosubmit mr-1 form-control' aria-label='Filter category'>
         <option value=''>{{ Entity.type == 'experiments' ? 'Filter status'|trans : 'Filter by type'|trans }}</option>
         {% for category in categoryArr %}
@@ -21,7 +20,7 @@
         {% endfor %}
       </select>
 
-      <!-- OWNER filter -->
+      {# OWNER filter #}
       <select name='owner' class='autosubmit mr-1 form-control' aria-label='Filter owner'>
         <option value=''>{{ 'Filter owner'|trans }}</option>
         {% for user in allTeamUsersArr %}
@@ -53,7 +52,7 @@
       {% endif %}
       <input type='hidden' name='mode' value='show' />
 
-      <!-- LIMIT if there is nothing in the query params, take the user configured one -->
+      {# LIMIT if there is nothing in the query params, take the user configured one #}
       {% set thelimit = App.Request.query.get('limit') %}
       {% if thelimit is empty %}
         {% set thelimit = App.Users.userData.limit_nb %}
@@ -65,13 +64,13 @@
         {% endfor %}
       </select>
 
-      <!-- SEARCH WITH TAG -->
+      {# SEARCH WITH TAG #}
       <select multiple name='tags[]' class='form-control mr-1 selectpicker' data-show-subtext='true' data-none-selected-text='{{ 'Tags'|trans }}' data-live-search='true' data-style='' data-style-base='form-control' data-showtick='true' data-actions-box='true'>
         {% for tag in tagsArrForSelect %}
           <option value='{{ tag.tag }}'{{ tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag|raw }}</option>
         {% endfor %}
       </select>
-      <!-- onBlur cannot work on bootstrap multiselect see https://stackoverflow.com/questions/42673800/bootstrap-multiselect-blur-event-not-triggering so add a button -->
+      {# onBlur cannot work on bootstrap multiselect see https://stackoverflow.com/questions/42673800/bootstrap-multiselect-blur-event-not-triggering so add a button #}
       <button class='btn btn-primary'>{{ 'Go'|trans }}</button>
 
     </div>
