don't show create new button on search page

--- a/src/templates/filter-order-sort.html
+++ b/src/templates/filter-order-sort.html
@@ -76,5 +76,7 @@
     </div>
     </form>
   </div>
-  {% include 'create-new.html' %}
+  {% if not searchPage %}
+    {% include 'create-new.html' %}
+  {% endif %}
 </div>
