--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -420,6 +420,16 @@ label {
     text-transform: uppercase;
 }
 
+.button-small {
+    border-radius: 25px;
+    color: #fff;
+    font-size: 10px;
+    letter-spacing: 1px;
+    padding: 5px 10px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 button:disabled {
     cursor: not-allowed;
 }
