fix issue with Back to listing button when coming from search page. fix #3968

--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -2,7 +2,7 @@
   <div class='col-md-10'>
     <!-- BACK TO LINK -->
     {% if App.Session.has('lastquery') %}
-      {% set lastquery = App.Session.get('lastquery')|qFilter %}
+      {% set lastquery = App.Session.get('lastquery') %}
     {% else %}
       {% set lastquery = 'mode=show' %}
     {% endif %}
