--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -1,3 +1,4 @@
+{# required vars: rw visibilityArr myTeamsArr myTeamgroupsArr usersArr #}
 <!-- Modal for permission edit -->
 <div class='modal fade' id='permModal-{{ rw }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel' aria-hidden='true'>
   <div class='modal-dialog' role='document'>
