--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -132,7 +132,29 @@
       <h5 class='d-inline'><i class='fas fa-fw fa-eye' title='{{ 'Visibility'|trans }}'></i>{{ 'Visibility'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canread'>edit</button>
       <div>
-      {{ Entity.getCan(Entity.entityData.canread) }}
+      {% set canread = Entity.getCan(Entity.entityData.canread) %}
+      {{ canread.base }}
+      {% if canread.teams %}
+        <details><summary>{{ 'Teams'|trans }}</summary>
+          {% for team in canread.teams %}
+            {{ team.name }}
+          {% endfor %}
+        </details>
+      {% endif %}
+      {% if canread.teamgroups %}
+        <details><summary>{{ 'Groups'|trans }}</summary>
+          {% for group in canread.teamgroups %}
+            {{ group.name }}
+          {% endfor %}
+        </details>
+      {% endif %}
+      {% if canread.users %}
+        <details><summary>{{ 'Users'|trans }}</summary>
+          {% for user in canread.users %}
+            {{ user.fullname }}
+          {% endfor %}
+        </details>
+      {% endif %}
       </div>
     </div>
     <div id='canwriteDiv' class='col-md-3 mb-2'>
@@ -140,7 +162,6 @@
       <h5 class='d-inline'><i class='fas fa-fw fa-pencil-alt' title='{{ 'Can write'|trans }}'></i>{{ 'Can write'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canwrite'>edit</button>
       <div>
-      {{ Entity.getCan(Entity.entityData.canwrite) }}
       </div>
     </div>
   </div>
