--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -127,7 +127,8 @@
       </fieldset>
     </div>
 
-    <div id='canreadDiv' class='col-md-3 mb-2'>
+    <div class='d-flex align-items-start justify-content-around col-md-6'>
+    <div id='canreadDiv'>
       <!-- CAN READ -->
       <h5 class='d-inline'><i class='fas fa-fw fa-eye' title='{{ 'Visibility'|trans }}'></i>{{ 'Visibility'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canread'>edit</button>
@@ -157,13 +158,37 @@
       {% endif %}
       </div>
     </div>
-    <div id='canwriteDiv' class='col-md-3 mb-2'>
+    <div id='canwriteDiv'>
       <!-- CAN WRITE -->
       <h5 class='d-inline'><i class='fas fa-fw fa-pencil-alt' title='{{ 'Can write'|trans }}'></i>{{ 'Can write'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canwrite'>edit</button>
       <div>
+      {% set canwrite = Entity.getCan(Entity.entityData.canwrite) %}
+      {{ canwrite.base }}
+      {% if canwrite.teams %}
+        <details><summary>{{ 'Teams'|trans }}</summary>
+          {% for team in canwrite.teams %}
+            {{ team.name }}
+          {% endfor %}
+        </details>
+      {% endif %}
+      {% if canwrite.teamgroups %}
+        <details><summary>{{ 'Groups'|trans }}</summary>
+          {% for group in canwrite.teamgroups %}
+            {{ group.name }}
+          {% endfor %}
+        </details>
+      {% endif %}
+      {% if canwrite.users %}
+        <details><summary>{{ 'Users'|trans }}</summary>
+          {% for user in canwrite.users %}
+            {{ user.fullname }}
+          {% endfor %}
+        </details>
+      {% endif %}
       </div>
     </div>
+  </div>
   </div>
 
   <!-- TITLE -->
